<resources>
    <string name="app_name">PlaneControllAPP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="ip">IP</string>
    <string name="_192_168_4_1">192.168.4.1</string>
    <string name="_23">23</string>
    <string name="port">Port</string>
</resources>