<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="text_port,edit_ip,edit_port,text_ip" />

    <TextView
        android:id="@+id/text_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/port"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/edit_port"
        app:layout_constraintTop_toTopOf="@+id/edit_port"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/edit_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_23"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/edit_ip"
        app:layout_constraintTop_toBottomOf="@+id/edit_ip"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/edit_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/_192_168_4_1"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/ip"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/edit_ip"
        app:layout_constraintTop_toTopOf="@+id/edit_ip"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:text="@string/connect"
        app:layout_constraintEnd_toEndOf="@+id/edit_port"
        app:layout_constraintTop_toBottomOf="@+id/edit_port" />

</androidx.constraintlayout.widget.ConstraintLayout>